# confuse

./: .gitmodules  ARCHITECTURE.md  Cargo.toml  README.md  fuser到dokan-sys转换层设计工作.md
Design/: dokan_impl调用方案.md  fuser_facade对齐方案.md  fuser到dokan-sys转换层涉及工作.md
Standard/: Rust dokan(-sys)库 API架构分析.md  Rust fuser库 API架构分析.md
examples/memfs/: inode.rs  main.rs  storage.rs
src/: lib.rs
src/dokan_impl/: helpers.rs  mod.rs  mount_options.rs  mountpoint.rs  tests.rs
src/dokan_impl/adapter/: adapter_state.rs  create_routes.rs  directory_routes.rs  handlers.rs  mod.rs  path_routes.rs  routes.rs  state.rs
src/dokan_impl/adapter/handler_methods/: dispatch.rs  metadata_io.rs  security_locks_streams.rs
src/dokan_impl/helpers/: operations.rs  security.rs
src/dokan_impl/tests/: basic.rs  basic_helpers.rs  handler_routes.rs  link_lifecycle.rs  mod.rs  resolver_core.rs  resolver_mutation.rs  security_streams.rs
src/fuser_facade/: experimental.rs  fuse_abi.rs  mod.rs  notifier.rs  request.rs  session.rs  types.rs
src/fuser_facade/filesystem/: api.rs  tests.rs
src/fuser_facade/reply/: api.rs  mod.rs  support.rs  tests.rs
src/fuser_facade/types/: tests.rs
tests/: api_surface.rs  macos_api_windows.rs
tests/api_surface/: checklist.rs  non_windows.rs  windows.rs
tests/api_surface/windows/: filesystem.rs
