[package]
name = "confuse"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
authors = ["inschrift.spruch.raum <inschrift.spruch.raum@outlook.com>"]
description = "A fuser-compatible filesystem API facade using Dokan on Windows and fuser elsewhere."
license = "MIT"
repository = "https://github.com/inschrift-spruch-raum/confuse"
homepage = "https://github.com/inschrift-spruch-raum/confuse"
documentation = "https://github.com/inschrift-spruch-raum/confuse/tree/docs"
readme = "README.md"
publish = true
keywords = ["fuse", "fuser", "dokan", "filesystem", "windows"]
categories = ["filesystem", "os::windows-apis", "api-bindings"]

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[features]
default = []
abi-7-20 = ["fuser/abi-7-20"]
abi-7-21 = ["fuser/abi-7-21"]
abi-7-22 = ["fuser/abi-7-22"]
abi-7-23 = ["fuser/abi-7-23"]
abi-7-24 = ["fuser/abi-7-24"]
abi-7-25 = ["fuser/abi-7-25"]
abi-7-26 = ["fuser/abi-7-26"]
abi-7-27 = ["fuser/abi-7-27"]
abi-7-28 = ["fuser/abi-7-28"]
abi-7-29 = ["fuser/abi-7-29"]
abi-7-30 = ["fuser/abi-7-30"]
abi-7-31 = ["fuser/abi-7-31"]
abi-7-36 = ["fuser/abi-7-36"]
abi-7-40 = ["fuser/abi-7-40"]
experimental = ["async-trait", "tokio", "fuser/experimental"]
libfuse = ["fuser/libfuse"]
libfuse2 = ["libfuse", "fuser/libfuse2"]
libfuse3 = ["libfuse", "fuser/libfuse3"]
macfuse-4-compat = ["fuser/macfuse-4-compat"]
# Intentional Windows facade feature: exposes fuser's macOS-only API surface so
# cross-platform filesystem implementations can compile and be tested on Windows.
macos-api = []
macos-no-mount = ["fuser/macos-no-mount"]
serializable = ["serde", "fuser/serializable"]

[dependencies]
async-trait = { version = "0.1", optional = true }
bitflags = "2.9"
libc = "0.2"
serde = { version = "1.0.102", features = ["std", "derive"], optional = true }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread"], optional = true }

[target.'cfg(not(windows))'.dependencies]
fuser = "0.17"

[target.'cfg(windows)'.dependencies]
dokan = "0.3"
dokan-sys = "0.3"
rustix = { version = "1", features = ["net"] }
widestring = "0.4"
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "processthreadsapi", "securitybaseapi", "winbase", "wincon", "winnt"] }
